refactor remaining admin pages and iam services
